bin/tests/errors/parser/parser_err_unexpected_token.swg
#global fileprivate

} // swc-expected-error {{parser_err_unexpected_token}}
) // swc-expected-error {{parser_err_unexpected_token}}
] // swc-expected-error {{parser_err_unexpected_token}}
